--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Javascript Card Deck Library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && tsc -p tsconfig.browser.json"
   },
   "repository": {
     "type": "git",
