--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "./dist",
-    "target": "es5",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": [
-      "es2016",
-      "dom",
-      "es5"
-    ]
+    "target": "es5",
+    "declaration": true,
+    "outDir": "./dist"
   },
   "include": [
-    "./src/**/*"
+    "src/**/*"
   ]
 }
